# podcast-qna

./: .gitignore  .pre-commit-config.yaml  .spotifycache  README.md  check_podcast_transcripts.py  collect_podcasts.py  config.env.example  context.txt  controller.py  controller_tests.py  cron_wrapper.sh  daily_cost_report.py  download_podcast_transcripts.py  download_sed_transcripts.py  download_youtube_transcripts.py  embeddings_export.csv  explore_embeddings.py  fix_cron_permissions.sh  index.html  package-lock.json  package.json  podcast_rag.py  podcast_semantic_search_complete.py  rag_sed.py  rag_sed_fast.py  rag_sed_ultrafast.py  requirements.txt  run_daily_report.sh  run_server.py  saved_podcasts.json  semantic_search_stage1.py  semantic_search_stage2.py  setup_daily_reports.sh  setup_macos_scheduler.sh  setup_step1.py  smtp.py  spotify-fetcher-podcasts.py  spotify-fetcher.py  tailwind.config.js  test_comprehensive.py  (+6 more)
.github/workflows/: ci.yml
backend/api/: controller.py
config/deployment/: Makefile  pyproject.toml
data/: bm25_params.json
docs/: DATA_COLLECTION.md  SECURITY.md
eval/: eval_results.json  eval_set.json  generate_eval_set.py  run_evaluation.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
scripts/: check_costs.py  setup_branch_protection.py
src/: App.tsx  __init__.py  api.ts  config-env-example.sh  config.py  cost_aware_tracker.py  cost_tracker.py  email_alerts.py  index.css  models.py  step2-complete.md
tests/: __init__.py  test_comprehensive.py  test_cost_explorer_detailed.py  test_minimal_aws.py  test_real_cost_tracking.py
transcripts/: 2025-05-29_All-In with Chamath_ Jason_ Sacks _ Friedberg_Nico Rosberg on the Booming Business of F1 _ All-In Live from Miami.txt  2025-05-31_All-In with Chamath_ Jason_ Sacks _ Friedberg_AI Doom vs Boom_ EA Cult Returns_ BBB Upside_ US Steel and Golden Votes.txt  2025-06-03_All-In with Chamath_ Jason_ Sacks _ Friedberg_Miami Mayor Francis Suarez_ The Recipe for Creating America_s Happiest City _ All-In Live from Miami.txt  2025-06-04_All-In with Chamath_ Jason_ Sacks _ Friedberg_Jared Isaacman_ What went wrong at NASA _ The All-In Interview.txt  2025-06-13_All-In with Chamath_ Jason_ Sacks _ Friedberg_ICE Raids_ LA Riots_ Strong Economic Data_ Politicized Fed_ Iran War with Tucker Carlson.txt  2025-06-17_SED News_ Corporate Spies_ Postgres_ and the Weird Life of Devs Right Now.txt  2025-06-17_Software Engineering Daily_NVIDIA_s Agentic AI for Container Security with Amanda Saunders and Allan Enemark.txt  2025-06-18_Y Combinator Startup Podcast_Cursor CEO_ Going Beyond Code_ Superintelligent AI Agents And Why Taste Still Matters.txt  2025-06-19_All-In with Chamath_ Jason_ Sacks _ Friedberg_Tony Robbins _ All-In Live from Miami.txt  2025-06-19_Emulating Retro Games on Modern Consoles with Robin Lavall_e and Bill Litshauer.txt  2025-06-19_Latent Space_ The AI Engineer Podcast_Scaling Test Time Compute to Multi-Agent Civilizations _ Noam Brown_ OpenAI.txt  2025-06-21_All-In with Chamath_ Jason_ Sacks _ Friedberg_IPOs and SPACs are Back_ Mag 7 Showdown_ Zuck on Tilt_ Apple_s Fumble_ GENIUS Act passes Senate.txt  2025-06-24_CodeRabbit and RAG for Code Review with Harjot Gill.txt  2025-06-24_Software Engineering Daily_Google Ventures with Erik Norlander.txt  2025-06-26_WayForward Games with Tomm Hulett and Voldi Way.txt  2025-06-28_All-In with Chamath_ Jason_ Sacks _ Friedberg_12 Day War_ Socialism Wins in NYC_ Stocks All-Time High_ AI Copyright_ Science Corner.txt  2025-07-04_All-In with Chamath_ Jason_ Sacks _ Friedberg_Big Beautiful Bill_ Elon_Trump_ Dollar Down Big_ Harvard_s Money Problems_ Figma IPO.txt  2025-07-06_Signals and Threads_An inside look at Jane Street_s tech internship with Jeanne Van Briesen_ Matt Else_ and Grace Zhang.txt  2025-07-06_Signals and Threads_Python_ OCaml_ and Machine Learning with Laurent Mazare.txt  (+6 more)
(+41 files in other folders)
